- refactor code - fix a positioning case with scrollbar width

--- a/yk-tooltip.css
+++ b/yk-tooltip.css
@@ -1,6 +1,6 @@
 .yk-tooltip-overlay-wrapper {
   visibility: hidden;
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
   width: 100%;
